// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth should render Login by default 1`] = `
<div
  className="auth"
>
  <Login />
  <h4>
    If you don't have an account 
    <a
      onClick={[Function]}
    >
      click here
    </a>
     to register.
  </h4>
</div>
`;

exports[`Auth should render Register when showLogin is false 1`] = `
<div
  className="auth"
>
  <Signup />
  <h4>
    If you already have an account 
    <a
      onClick={[Function]}
    >
      click here
    </a>
     to log in.
  </h4>
</div>
`;
